# spear

./: .gitattributes  .gitignore  README.md  format.sh
.github/: README.md
engine/: CMakeLists.txt
engine/include/spear/: camera.hh  create_scene.hh  delta_time.hh  event_handler.hh  game_object.hh  material.hh  movement_controller.hh  scene.hh  scene_manager.hh  spear.hh  spear_root.hh  sprite_3d.hh  stb_texture.hh  time.hh  transform.hh  util.hh  window.hh
engine/include/spear/model/: model_loader.hh  obj_loader.hh
engine/include/spear/physics/: base_object.hh  constants.hh  physics_object.hh
engine/include/spear/physics/bullet/: object.hh  object_data.hh  world.hh
engine/include/spear/rendering/: api.hh  base_model.hh  base_renderer.hh  base_texture.hh  shader_type.hh
engine/include/spear/rendering/opengl/: renderer.hh  texture.hh
engine/include/spear/rendering/opengl/model/: model.hh  obj_model.hh
engine/include/spear/rendering/opengl/shapes/: cube.hh  quad.hh  sphere.hh
engine/include/spear/rendering/opengl/texture/: sdl_texture.hh  stb_texture.hh  texture.hh
engine/include/spear/rendering/shapes/: base_cube.hh  shape.hh  textured_shape.hh
engine/include/spear/rendering/vulkan/: error.hh  renderer.hh
engine/include/spear/rendering/vulkan/core/: command_buffer_manager.hh  device_manager.hh  framebuffer_manager.hh  pipeline_manager.hh  render_pass_manager.hh  swapchain.hh  synchronization.hh
engine/include/spear/rendering/vulkan/texture/: stb_texture.hh  texture.hh
engine/include/spear/shapes/: cube.hh  quad.hh
engine/include/spear/window/: base_window.hh  opengl_window.hh  vulkan_window.hh
engine/shaders/: cube_fragment.glsl  cube_vertex.glsl  material_fragment.glsl  material_vertex.glsl  minimal_vulkan_fragment.glsl  minimal_vulkan_vertex.glsl
engine/src/: camera.cc  create_scene.cc  delta_time.cc  event_handler.cc  game_object.cc  movement_controller.cc  scene.cc  scene_manager.cc  sprite3d.cc  stb_texture.cc  time.cc  transform.cc  util.cc  window.cc
engine/src/model/: obj_loader.cc
engine/src/physics/: base_object.cc  constants.cc  physics_object.cc
engine/src/physics/bullet/: object.cc  object_data.cc  world.cc
engine/src/rendering/: api.cc  base_model.cc  base_renderer.cc  shader_type.cc
engine/src/rendering/opengl/: renderer.cc  texture.cc
engine/src/rendering/opengl/model/: model.cc  obj_model.cc
engine/src/rendering/opengl/shapes/: cube.cc  quad.cc  sphere.cc
engine/src/rendering/opengl/texture/: sdl_texture.cc  stb_texture.cc  texture.cc
engine/src/rendering/shapes/: base_cube.cc  shape.cc  textured_shape.cc
engine/src/rendering/vulkan/: renderer.cc
engine/src/rendering/vulkan/core/: command_buffer_manager.cc  device_manager.cc  framebuffer_manager.cc  pipeline_manager.cc  render_pass_manager.cc  swapchain.cc  synchronization.cc
engine/src/rendering/vulkan/texture/: stb_texture.cc  texture.cc
engine/src/shapes/: cube.cc  quad.cc
engine/src/window/: base_window.cc  opengl_window.cc  vulkan_window.cc
runtime/: CMakeLists.txt  main.cc
runtime/opengl/: CMakeLists.txt  main.cc
runtime/vulkan/: CMakeLists.txt  main.cc
